--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "example_package_YOUR_USERNAME_HERE"
+name = "terraform_vaccum"
 version = "0.0.1"
 authors = [
-    { name="Example Author", email="author@example.com" },
+    { name="Robin LIORET", email="robin.lioret@capgemini.com" },
 ]
-description = "A small example package"
+description = "Allows to create Terraform code from existing infrastructure."
 readme = "README.md"
 license = { file="LICENSE" }
 requires-python = ">=3.9"
@@ -19,5 +19,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+"Homepage" = "https://localhost"
+"Bug Tracker" = "https://localhost"
